--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "jarallax": "^1.12.2",
     "mdbreact": "^4.25.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
